# Cirrhosis-Patient-Survival-Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  example_test.csv  pyproject.toml
cirrhosis_patient_survival_prediction/: example_train.csv  model.py
cirrhosis_patient_survival_prediction/data/: results.csv
data/: results.csv
notebooks/: optuna_xgboost.ipynb
scripts/: hpo.py  train_task.py
