[project]
name = "cirrhosis-patient-survival-prediction"
version = "0.1.0"
description = "this is my ml project for university"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib (>=1.5.3,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "fire (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
